--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@
 {
 	background-color: #FFF;
 	font-family: Raleway, Sans Serif;
-	margin: 35px;
+	width: 100%;
+	margin: 50px;
 
 }
+
 
 body h1
 {
@@ -13,20 +15,37 @@ body h1
 	font-size: 28px;
 }
 
-article p
+main{
+	font-family: Raleway, Sans Serif;
+}
+
+#accroche  {
+
+		
+}
+
+#accroche h1
 {
 	font-family: Raleway, Sans Serif;
-	font-size: 20.5px;
+	font-size: 30px;
+	margin-bottom: 0;
+}
+
+#accroche p {
+
+	font-family: Raleway, Sans Serif;
+	font-size: 22px;
+	margin-bottom: 20px;
+	margin-top: 10px;
 }
 
 
 
 header
 {
-	display: grid;
-	grid-template-columns: 65% 35%;
-	grid-template-rows: 20px 20px;
-	margin-bottom: 45px; 
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 50px;
 
 }
 
@@ -42,6 +61,7 @@ nav ul
 	display: flex;
 	text-align: right;
 	justify-content: flex-end;
+	margin-right: 20px;
 	
 
 
@@ -50,8 +70,8 @@ nav ul
 nav li
 {
 	margin-right: 80px;
-	font-size: 18px;
-
+	font-size: 20px;
+	
 }
 
 
@@ -59,35 +79,60 @@ nav li
 #recherche
 {
 	display: flex;
-	background-origin: content-box;
-
+	position: relative;
+	height: 65px;
+	width: 570px;
+	font-family: Raleway, Sans Serif;
+	margin: 5px;
 }
 
-#search
-{
-	border: 1px solid;
-	border-color: grey transparent grey transparent;
-}
+#recherche i {
 
-#gps
-{
-	background-color: #F2F2F2;
-	border-top-left-radius: 10px;
-	border-bottom-left-radius: 10px;
+	display: flex;
 	justify-content: center;
-
+	background-color: #F2F2F2;
+	border-top-left-radius: 20px;
+	border-bottom-left-radius: 20px;
+	width: 65px;
+	align-content: center;
+	align-items: center;
+	font-size: 22.5px;
+	
 }
 
-.blue_color
-{
+.bouton {
+
 	background-color: #0065FC;
-	border-top-right-radius: 10px;
-	border-bottom-right-radius: 10px;
+	color: #FFF;
+	border-top-right-radius: 20px;
+	border-bottom-right-radius: 20px;
+	border: none;
+	box-sizing: content-box;
+	flex: 2;
+	font-size: 22.5px;	
+
+
 }
 
+.search {
+
+	width: 280px;
+	height: auto;
+	padding: 20px;
+	color: black;
+	font-size: 22.5px;
+	border-color: #F2F2F2;
+	border-style: solid;
+	
+}
+
+#search::-moz-placeholder{
+	color: black !important;
+	
+}
 #filtres
 {
-
+	display: flex;
 }
 
 #indic
@@ -99,35 +144,61 @@ nav li
 {
 	font-family: Raleway, Sans Serif;
 	display: flex;
-	grid-template-columns: 65% 35%;
+	position: relative;
 	justify-content: space-between;
-
+	width: 100%;
+	margin: auto;
 }
 
 #hebergement
 {
-	background-origin: border-box;
+	background-attachment: fixed;
 	background-color: #F2F2F2;
 	border-radius: 20px;
 	padding: 40px;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
+	left: 0;
+	top: 0;
+	width: 1180px;
+	height: 800px;
 	
+}
+#hebergement h1 {
 
+	align-self: flex-start;
 }
 
 #populaire
 {
 	background-color: #F2F2F2;
+	background-attachment: fixed;
 	border-radius: 20px;
 	padding: 40px;
+	width: 400px;
+	height: 800px;
+	margin-right: 75px;
+
 	
 	
+}
+#populaire h3 {
+	font-size: 1.4em;
 }
 
 .heber
 {
 	background-color: #FFF;
+	width: 65%;
+
+	
+}
+
+
+	
 }
 
 #activites
