--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ nav li
 	width: 570px;
 	font-family: Raleway, Sans Serif;
 	margin: 5px;
+	margin-bottom: 30px;
 }
 
 #recherche i {
@@ -107,11 +108,8 @@ nav li
 	border-top-right-radius: 20px;
 	border-bottom-right-radius: 20px;
 	border: none;
-	box-sizing: content-box;
 	flex: 2;
-	font-size: 22.5px;	
-
-
+	font-size: 22.5px;
 }
 
 .search {
@@ -133,10 +131,54 @@ nav li
 #filtres
 {
 	display: flex;
+	justify-content: space-between;
+	width: 70%;
+	height: 64px;
 }
+
+.fil{
+	display: flex;
+	justify-content: space-around;
+	border: solid;
+	border-color: #F2F2F2;
+	border-radius: 40px;
+	width: auto;
+	font-size: 22.5px;
+	border-left: none;
+}
+
+.fil p{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding-left: 20px;
+	padding-right: 20px;
+	font-weight: bold;
+}
+
+#filtres span {
+	display: flex;
+	background-color: #DEEBFF;
+	color:#0065FC;
+	border-radius: 100%;
+	justify-content: center;
+	width: 60px;
+	height: 60px;
+	justify-self: flex-start;
+	align-items: center;
+	border: none;
+}
+
+#filtres h2{
+	justify-self: flex-start;
+	width: auto;
+}
+
 
 #indic
 {
+	display: flex;
+	margin-top: 30px;
 
 }
 
