--- a/style.css
+++ b/style.css
@@ -2,9 +2,14 @@
 {
 	background-color: #FFF;
 	font-family: Raleway, Sans Serif;
-	width: 1280px;
+	width: 100%;
 	margin: 50px;
 
+}
+
+body{
+	margin-right: 30px;
+	margin-left: 5px;
 }
 
 
@@ -178,17 +183,40 @@ h2.fil{
 {
 	display: flex;
 	margin-top: 30px;
+	margin-bottom: 30px;
+	justify-content: flex-start;
+	align-items: center;
 
+}
+
+#indic i{
+	font-size: 16.5px;
+	font-style: normal;
+	color: #0065FC;
+	border: solid;
+	border-color: #F2F2F2;
+	border-radius: 100%;
+	width: 30px;
+	height: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-right: 10px;
+	
+}
+
+#indic p{
+	display: flex;
+	align-items: center;
+	margin-left: 10px;
+	font-size: 19px;
 }
 
 #section_hebergement
 {
 	font-family: Raleway, Sans Serif;
 	display: flex;
-	position: relative;
 	justify-content: space-between;
-	width: 100%;
-	margin: auto;
 }
 
 #hebergement
@@ -198,19 +226,25 @@ h2.fil{
 	border-radius: 20px;
 	padding: 40px;
 	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
-	left: 0;
-	top: 0;
-	width: 1180px;
-	height: 800px;
+	flex-flow: column wrap;
+	width: 1100px;
+	height: 750px;
 	
 }
-#hebergement h1 {
+#hebergement h1{
 
 	align-self: flex-start;
+	padding-left: 20px;
+	margin-bottom: 10px;
+	margin-top: 20px;
+	font-weight: bold;
+}
+#hebergement a{
+
+	align-self: flex-start;
+	padding-left: 20px;
+	font-size: 23px;
+	font-weight: bold;
 }
 
 #populaire
@@ -219,25 +253,164 @@ h2.fil{
 	background-attachment: fixed;
 	border-radius: 20px;
 	padding: 40px;
-	width: 400px;
-	height: 800px;
+	padding-top: 40px;
+	display: flex;
+	flex-direction: column;
+	width: 480px;
+	height: 750px;
 	margin-right: 75px;
 
-	
-	
-}
-#populaire h3 {
-	font-size: 1.4em;
 }
 
-.heber
-{
+.pop {
 	background-color: #FFF;
-	width: 65%;
-		
+	width: 450px;
+	height: 190px;
+	display: flex;
+	border-radius: 20px;
+	margin-bottom: 40px;
+	box-shadow: 5px 5px 20px #bebebe;
+}
+
+
+#pop_hotel {
+	display: flex;
+	flex-flow: column wrap;
+	padding-top: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+#pop_hotel img {
+	width: 160px;
+	height: 180px;
+	border-bottom-left-radius: 20px;
+	border-top-left-radius: 20px;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	padding: 5px;
+}
+
+#pop_hotel h3{
+	display: flex;
+	align-items: center;
+	font-size: 18.8px;
+	margin-bottom: 0px;
+	margin-left: 15px;
+	margin-right: 55px;
+}
+
+#pop_hotel p{
+	display: flex;
+	align-items: flex-start;
+	flex-flow: column wrap;
+	justify-content: center;
+	margin-bottom: 55px;
+	margin-left: 15px;
+}
+
+#pop_hotel i{
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+	flex-flow: row wrap;
+}
+
+#pop_icone {
+	display: flex;
+	justify-content: space-between;
+}
+
+#pop_icone h1 {
+	align-self: flex-start;
+	padding-left: 20px;
+	margin-bottom: 10px;
+	margin-top: 20px;
+	font-weight: bold;
+}
+
+#pop_icone i {
+	margin-top: 20px;
+	font-size: 25px;
+}
+
+#hotel {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+	padding-top: 10px;
+	padding: 20px;
+}
+
+.heber{
+
+	background-color: #FFF;
+	width: 310px;
+	height: 260px;
+	display: flex;
+	border-radius: 20px;
+	margin-bottom: 40px;
+	flex-wrap: wrap;
+	box-shadow: 5px 5px 20px #bebebe;
+}
+
+
+.alignement{
+	display: flex;
+	flex-flow: column wrap;
 }
 
 .heber img{
-	width: 220px;
+	width: 300px;
+	height: 150px;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+	padding-top: 5px;
+	padding-left: 5px;
+	display: flex;
+	order: 1;
 }
+
+.heber h3{
+	padding-left: 15px;
+	display: flex;
+	align-content: flex-start;
+	flex-wrap: wrap;
+	order: 2;
+	margin-bottom: 10px;
+	margin-top: 10px;
+}
+
+.heber p{
+	padding-left: 15px;
+	display: flex;
+	align-content: flex-start;
+	order: 3;
+	margin-top: 0%;
+	margin-bottom: 0px;
+}
+mark {
+	font-weight: bold;
+}
+
+.heber i{
+	padding-left: 0px;
+}
+
+.etoile {
+	order: 4;
+	margin-left: 15px;
+	margin-bottom: 10px;
+	color: #0065FC;
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+}
+
+.gris {
+	color: #bebebe;
+	display: inline;
+}
+
 
