--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 {
 	background-color: #FFF;
 	font-family: Raleway, Sans Serif;
-	width: 100%;
+	width: 1200px;
 	margin: 50px;
 
 }
@@ -217,6 +217,7 @@ h2.fil{
 	font-family: Raleway, Sans Serif;
 	display: flex;
 	justify-content: space-between;
+
 }
 
 #hebergement
@@ -226,10 +227,7 @@ h2.fil{
 	border-radius: 20px;
 	padding: 40px;
 	display: flex;
-	flex-flow: column wrap;
-	width: 1100px;
-	height: 750px;
-	
+			
 }
 #hebergement h1{
 
@@ -390,7 +388,8 @@ h2.fil{
 	margin-top: 0%;
 	margin-bottom: 0px;
 }
-mark {
+
+.prix{
 	font-weight: bold;
 }
 
