--- a/smartphone.css
+++ b/smartphone.css
@@ -15,35 +15,37 @@
 
 #bloc_page {
     
-    max-width: 1400px;
-    margin: auto;
+    max-width: 360px;
     font-family: 'Raleway-SemiBold', Sans Serif;
 }
 
 header {
     
     display: flex;
-    justify-content: space-between;
+    flex-flow: row wrap;
 }
 
 header img {
-    
-    max-width: 90px;
-    max-height: 40px;
+    max-width: 100px;
+    max-height: 50px;
+    margin-left: 15px;
+    margin-right: 50px;
+}
+
+header nav {
+    display: flex;
 }
 
 nav ul {
-    
-    display: flex;
-	text-align: right;
-    justify-content: flex-end;
     list-style-type: none;
-
+    display: flex;
+    flex-direction: column-reverse;
+    
 }
 
+
 nav li {
-    
-    margin-left: 70px;
+    margin-left: 15px;
 }
 
 nav a {
@@ -53,17 +55,13 @@ nav a {
 
 .link {
     color: black;
+    flex-wrap: wrap-reverse;
 }
 
 .link:hover {
     border-top: 3px solid #0065FC;
     padding-top: 15px;
-    color: #0065FC;   
-}
-.inscription {
-    text-decoration: none;
     color: #0065FC;
-    font-weight: bold;
 }
 
 nav a:visited {
@@ -72,10 +70,11 @@ nav a:visited {
 
 #accroche h1 {
     
-    font-size: 19px;
+    font-size: 21px;
     margin-bottom: 0;
+    margin-left: 15px;
+    margin-right: 40px;
     font-family: 'Raleway-Bold';
-    font-weight: normal;
 }
 
 #accroche p {
@@ -83,14 +82,23 @@ nav a:visited {
     font-size: 14px;
     margin-top: 10px;
     font-family: 'Raleway-Regular';
+    margin-left: 15px;
 }
 
 #recherche {
     
     display: flex;
-	height: 50px;
-	width: 365px;
-	margin-bottom: 30px;
+    max-width: 320px;
+	height: 55px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    justify-content: center;
+    margin-right: 30px;
+    margin-left: 15px;
+    border: #bebebe;
+    border-top: 1px solid #F2F2F2;
+    border-bottom: 1px solid #F2F2F2;
+
 }
 
 #recherche i {
@@ -100,61 +108,67 @@ nav a:visited {
 	background-color: #F2F2F2;
 	border-top-left-radius: 15px;
 	border-bottom-left-radius: 15px;
-	width: 50px;
+	width: 55px;
 	align-content: center;
 	align-items: center;
-	font-size: 16px;
+    font-size: 16px;
 	
 }
 
 .bouton {
 
-	background-color: #0065FC;
+    background-color: #0065FC;
+    width: 55px;
 	color: #FFF;
-	border-top-right-radius: 15px;
-	border-bottom-right-radius: 15px;
+	border-radius: 15px;
 	border: none;
 	flex: 2;
     font-size: 16px;
     font-family: 'Raleway-Bold';
-    font-weight: normal;
+    
 }
 
 .search {
 
-    width: 175px;
+    width: 220px;
 	font-size: 16px;
-	border-color: #F2F2F2;
-    border-style: solid;
+	border: 0px;
     padding: 10px;
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
-    
+
 }
 
 
 #filtres {
     
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 15px;
 }
 
 #container_fil {
     display: flex;
-    justify-content: space-around;
-    width: 900px;
+    width: 350px;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
 }
 
 .fil {
     
     display: flex;
+    flex-flow: row wrap;
 	border: solid;
 	border-color: #F2F2F2;
 	border-radius: 40px;
-	font-size: 19px;
+	font-size: 14px;
     border-left: none;
     height: 50px;
-    justify-content: space-around;
+    font-weight: 600;
+    margin-bottom: 10px;
+    margin-right: 15px;
+    font-family: 'Raleway-Bold';
+    font-weight: normal;
     
 }
 
@@ -162,10 +176,8 @@ nav a:visited {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding-left: 15px;
-    padding-right: 20px;
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
+	padding-left: 10px;
+    padding-right: 15px;
     
 }
 .fil:hover {
@@ -188,8 +200,9 @@ nav a:visited {
 
 #filtres h2 {
     display: flex;
-    font-size: 16px;
+    font-size: 15px;
     margin-right: 10px;
+    margin-left: 5px;
     font-family: 'Raleway-Bold';
     font-weight: normal;
 }
@@ -197,60 +210,56 @@ nav a:visited {
 #indic
 {
 	display: flex;
-	margin-top: 20px;
-	margin-bottom: 30px;
+	margin-top: 5px;
+	margin-bottom: 20px;
 	justify-content: flex-start;
-    align-items: center;
-    margin-left: 8px;
+    margin-left: 15px;
+    align-items: baseline;
 
 }
 
 #indic i {
-	font-size: 14px;
+	font-size: 13px;
 	font-style: normal;
 	color: #0065FC;
 	border: solid;
 	border-color: #F2F2F2;
 	border-radius: 100%;
-	width: 25px;
+	width: 34px;
 	height: 25px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin-right: 10px;
 	
 }
 
 #indic p {
 	display: flex;
-	align-items: center;
 	margin-left: 8px;
     font-size: 15px;
     font-family: 'Raleway-Regular';
 }
 
 #section_hebergement {                                      /*  PARTIE HEBERGEMENT */
-    display: flex;                                                                                     
-    height: 600px;
+    display: flex;
+    flex-direction: column;                                                                                     
     justify-content: space-between;                                                                    
 }                                                                                                       
                                                                                                         
-.panneau1 {                                  /*hébergement*/                                                           
-    background-color: #F2F2F2;                                                                        
-    width: 800px;                                                                                       
-    border-radius: 25px;
-    padding: 40px;
-    padding-top: 22px;                                                                            
+.panneau1 {                                  /*hébergement*/                                                                                                                              
+    width: 100%;                                                                                       
+    padding-top: 22px;
+    padding-left: 15px;
+    order: 2;                                                                            
 }                                                                                                       
                                                                                                         
 .panneau2 {                                  /*les plus populaire*/                                                           
     background-color: #F2F2F2;                                                                   
-    width: 390px;                                                                                   
-    border-radius: 25px;
-    padding: 40px;
-    padding-top: 22px;
-     
-    
+    max-width: 360px;
+    padding-top: 15px;
+    padding-left: 15px;
+    padding-bottom: 15px;
+    order: 1;
 }
 
 #hebergement {                                                      
@@ -258,9 +267,9 @@ nav a:visited {
 }
 
 #hebergement h1 {
-    font-size: 21px;
+    font-size: 20px;
     font-family: 'Raleway-Bold';
-    font-weight: normal;                                            
+    font-weight: normal;                                          
 }
 
 #hotel {
@@ -274,38 +283,38 @@ nav a:visited {
     border-radius: 20px;
     margin-bottom: 30px;
     padding: 4px;
-    height: 188px;
+    height: 170px;
     box-shadow: 5px 5px 20px #bebebe;
 }
 
 .heber img {
-    width: 240px;
-    height: 120px;
+    width: 300px;
+    height: 100px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
 
 .heber h3 {
-    font-size: 15.5px;
+    font-size: 13px;
     margin-left: 8px;
-    margin-bottom: 2px;
+    margin-bottom: 5px;
     margin-top: 4px;
     font-family: 'Raleway-Bold';
     font-weight: normal;
 }
 
 .heber p {
-    font-size: 14px;
+    font-size: 12px;
     margin-left: 8px;
     margin-top: 0px;
-    margin-bottom: 4px;
+    margin-bottom: 5px;
     font-family: 'Raleway-Regular';
 }
 
 .heber i {
     display: flex;
 	margin-top: 0px;
-    font-size: 12px;
+    font-size: 11px;
 }
 
 .etoile {
@@ -326,13 +335,11 @@ nav a:visited {
 
 #hebergement a {
     font-size: 15px;
-    font-weight: bold;
-    margin-left: 5px;
     margin-top: 5px;
     color: black;
-    text-decoration: none;                                                                                    
+    text-decoration: none;
+    font-family: 'Raleway-Bold';                                                                                 
 }
-
 #hebergement a:hover {
     color: #0065FC;
 }
@@ -348,24 +355,26 @@ nav a:visited {
 	display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 18px;
-
+    font-size: 16px;
+    margin-right: 15px;
+    margin-left: 5px;
 }
 
 #pop_icone h1 {
     font-family: 'Raleway-Bold';
     font-weight: normal;
-    font-size: 21px;
+    font-size: 20px;
 }
 
 .pop {
 	background-color: #FFF;
-	display: flex;
-	height: 135px;
+    display: flex;
+	height: 125px;
 	border-radius: 20px;
     box-shadow: 5px 5px 20px #bebebe;
-    margin-bottom: 32px;
+    margin-bottom: 15px;
     padding-right: 50px;
+    margin-right: 15px;
     
 }
 
@@ -375,7 +384,7 @@ nav a:visited {
 }
 
 #pop_hotel img {
-	width: 120px;
+	width: 110px;
 	border-bottom-left-radius: 20px;
 	border-top-left-radius: 20px;
 	display: flex;
@@ -386,8 +395,9 @@ nav a:visited {
 
 .pop h3 {
     margin-left: 10px;
-    font-size: 18px;
+    font-size: 13px;
     margin-bottom: 5px;
+    margin-top: 15px;
     font-family: 'Raleway-Bold';
     font-weight: normal;
 }
@@ -395,24 +405,25 @@ nav a:visited {
 .pop p {
     margin-left: 10px;
     margin-top: 4px;
-    margin-bottom: 30px;
-    font-size: 14px;
+    margin-bottom: 42px;
+    font-size: 10px;
     font-family: 'Raleway-Regular';
 }
 
 .pop i {
-    font-size: 12px;
+    font-size: 11px;
 }
 
 .banniere_act {
-    height: 500px;
+    display: flex;
+    flex-direction: column;
     margin-bottom: 20px;
     margin-right: 5px;
 }
 
 #activites h1 {
     margin-top: 50px;
-    margin-left: 10px;
+    margin-left: 20px;
     font-size: 18px;
     margin-bottom: 5px;
     font-family: 'Raleway-Bold';
@@ -421,16 +432,16 @@ nav a:visited {
 
 #photo {
     display: flex;
-    flex-flow: column wrap;
-    justify-content: space-around;
-    align-content: space-between;
-    height: 475px;
+    flex-direction: column;
     margin-right: 5px;
+    margin-left: 15px;
+    margin-top: 15px;
+    margin-bottom: 10px;
     
 }
 
 #photo img {
-    width: 310px;
+    width: 300px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
@@ -448,67 +459,73 @@ nav a:visited {
 
 .act1 {
     background-color: #FFF;
-    width: 310px;
-    height: 430px;
+    width: 300px;
+    height: 180px;
     border-radius: 20px;
     box-shadow: 5px 5px 20px #bebebe;
+    margin-bottom: 20px;
 }
 .act1 img {
-    height: 375px;
+    height: 125px;
 }
 .act2 {
     background-color: #FFF;
-    width: 310px;
-    height: 235px;
+    width: 300px;
+    height: 180px;
     border-radius: 20px;
     box-shadow: 5px 5px 20px #bebebe;
+    margin-bottom: 20px;
 }
 .act2 img{
-    height: 180px
+    height: 125px
 }
 .act3 {
     background-color: #FFF;
-    width: 310px;
-    height: 155px;
+    width: 300px;
+    height: 180px;
     border-radius: 20px;
     box-shadow: 5px 5px 20px #bebebe;
+    margin-bottom: 20px;
 }
 .act3 img{
-    height: 100px;
+    height: 125px;
 }
 .act4 {
     background-color: #FFF;
-    width: 310px;
-    height: 185px;
+    width: 300px;
+    height: 180px;
     border-radius: 20px;
     box-shadow: 5px 5px 20px #bebebe;
+    margin-bottom: 20px;
 }
 .act4 img {
-    height: 130px;
+    height: 125px;
 }
 .act5 {
     background-color:#FFF;
-    width: 310px;
-    height: 205px;
+    width: 300px;
+    height: 180px;
     border-radius: 20px;
     box-shadow: 5px 5px 20px #bebebe;
+    margin-bottom: 20px;
 }
 
 .act5 img {
-    height: 150px;
+    height: 125px;
 }
 
 #bas_de_page {
     background-color: #F2F2F2;
     padding: 40px;
-    height: 135px;
     display: flex;
+    flex-direction: column;
 
 }
 
 #footer_align {
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
     width: 75%;
 }
 
@@ -517,7 +534,6 @@ nav a:visited {
     font-size: 16px;
     margin-bottom: 10px;
     font-family: 'Raleway-Bold';
-    font-weight: normal;
 }
 
 .propos p {
