--- a/smartphone _small.css
+++ b/smartphone _small.css
@@ -16,7 +16,7 @@
 #bloc_page {
     
     max-width: 100%;
-    margin: auto;
+    margin: 10px;
     margin-top: 20px;
     font-family: 'Raleway-SemiBold', Sans Serif;
 }
@@ -47,12 +47,12 @@ nav a {
 }
 
 .link_smart, .inscription {
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .link_smart {
     width: 50%;
-    height: 75px;
+    height: 65px;
     color: black;
     font-family: 'Raleway-Regular';    
     border-bottom: 4px solid #F2F2F2;
@@ -78,16 +78,17 @@ nav a {
 
 #accroche h1 {
     
-    font-size: 36px;
-    margin-bottom: 0px;
+    font-size: 26px;
+    margin-bottom: 10px;
     margin-top: 35px;
+    margin-right: 10px;
     font-family: 'Raleway-Bold';
     font-weight: normal;
 }
 
 #accroche p {
-    
-    font-size: 26px;
+    margin-top: 10px;
+    font-size: 19px;
     font-family: 'Raleway-Regular';
 }
 
@@ -95,29 +96,31 @@ nav a {
     display: flex;
     justify-content: center;
     max-width: 100%;
-    height: 90px;
+    height: 70px;
     margin-top: 50px;
-    margin-bottom: 35px;
+    margin-bottom: 30px;
     border-top: 1px solid #F2F2F2;
     border-bottom: 1px solid #F2F2F2;
-    border-radius: 30px;
+    border-radius: 25px;
 }
 
-#recherche i, .bouton, .search, #recherche span {
-    font-size: 28px;
+.bouton, .search, #recherche span {
+    font-size: 20px;
 }
+
 
 #recherche i {
+    font-size: 24px;
 	background-color: #F2F2F2;
-	border-top-left-radius: 30px;
-	border-bottom-left-radius: 30px;
+	border-top-left-radius: 25px;
+	border-bottom-left-radius: 25px;
 }
 
 #recherche i, #recherche span {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 90px;
+    min-width: 70px;
 }
 
 .bouton, .search {
@@ -135,7 +138,7 @@ nav a {
     justify-content: center;
     background-color: #0065FC;
 	color: #FFF;
-	border-radius: 30px;
+	border-radius: 25px;
 }
 
 .search {
@@ -163,10 +166,11 @@ nav a {
     align-items: center;
 	border-color: #ececec;
     border-radius: 50px;
-	font-size: 25px;
+	font-size: 20px;
     border-left: none;
-    height: 85px;
-    margin-right: 15px;
+    width: auto;
+    height: 65px;
+    margin-right: 10px;
     margin-bottom: 15px;
 }
 
@@ -176,8 +180,8 @@ nav a {
 }
 
 .fil p {
-    padding-right: 25px;
-    padding-left: 15px;
+    padding-right: 15px;
+    padding-left: 10px;
 }
 
 .fil:hover {
@@ -193,8 +197,8 @@ nav a {
 	background-color: #DEEBFF;
 	color:#0065FC;
 	border-radius: 100%;
-    width: 90px;
-    height: 90px;
+    min-width: 65px;
+    min-height: 65px;
     justify-self: flex-start;
     display: flex;
 	align-items: center;
@@ -203,7 +207,7 @@ nav a {
 }
 
 #filtres h2, .fil span {
-    font-size: 28px;
+    font-size: 20px;
 }
 
 #indic
@@ -216,12 +220,12 @@ nav a {
 }
 
 #indic i {
-    font-size: 22px;
+    font-size: 18px;
 	color: #0065FC;
 	border: solid;
 	border-color: #F2F2F2;
 	border-radius: 100%;
-    padding: 10px 17px;
+    padding: 10px 15px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -229,7 +233,7 @@ nav a {
 }
 
 #indic p {
-    font-size: 25px;
+    font-size: 16px;
     font-family: 'Raleway-Regular';
 }
 
@@ -241,31 +245,34 @@ nav a {
 #populaire, #hebergement, #activite_smart {
     padding: 30px;
     padding-top: 20px;
-    padding-bottom: 45px;
+    padding-bottom: 30px;
 }
 
 #hebergement {
-
+    margin-bottom: 10px;
     order: 2;
 }
 
 #hebergement h2, #pop_icone h2, #banniere_act h1 {
-    font-size: 32px;
+    font-size: 21px;
     font-family: 'Raleway-Bold';
     font-weight: normal;
 }
 
 .heber, .pop {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     background-color: #fff;
     box-shadow: 0px 0px 10px #bebebe;
     border-radius: 20px;
     padding: 6px;
 }
+ .heber {
+     margin-bottom: 30px;
+ }
 
 #hotel_smart img {
     width: 100%;
-    min-height: 180px;
+    height: 60%;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
@@ -277,19 +284,18 @@ nav a {
 }
 
 #hotel_smart h3 {
-    font-size: 22px;
+    font-size: 17px;
     font-family: 'Raleway-Bold';
     font-weight: normal;
 }
 
 #hotel_smart p {
-    font-size: 19px;
+    font-size: 15px;
     font-family: 'Raleway-Regular';
 }
 
 #hotel_smart i {
-    font-size: 18px;
-    margin-top: 3px;
+    font-size: 15px;
     margin-bottom: 5px;
 }
 
@@ -306,7 +312,7 @@ nav a {
 }
 
 .afficher {
-    font-size: 25px;
+    font-size: 20px;
     font-family: 'Raleway-Bold';
     color: black;
     text-decoration: none;
@@ -348,14 +354,14 @@ nav a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 29px;
+    font-size: 25px;
     margin-bottom: 10px;
 }
 
 .pop {
     display: flex;
-    min-height: 170px;
-    max-height: 260px;
+    min-height: 150px;
+    max-height: 180px;
     padding-right: 20px;
 }
 
@@ -370,7 +376,7 @@ nav a {
 }
 
 .pop h3 {
-    font-size: 23px;
+    font-size: 16px;
     margin-top: 10px;
     margin-bottom: 10px;
     font-family: 'Raleway-Bold';
@@ -379,17 +385,17 @@ nav a {
 
 .pop p {
     margin-top: 4px;
-    font-size: 20px;
+    font-size: 14px;
     font-family: 'Raleway-Regular';
 }
 
 .pop i {
-    font-size: 19px;
+    font-size: 15px;
     margin-bottom: 5px;
 }
 
 .pop .etoile {
-    margin-top: 70px;
+    margin-top: 50px;
     margin-bottom: 5px;
 }
 #banniere_act {
@@ -405,20 +411,18 @@ nav a {
     flex-direction: column;
 }
 
-
 .act img {
     width: 100%;
-    height: 70%;
+    height: 75%;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
 
 .act h3 {
-    font-size: 25px;
+    font-size: 18px;
     font-family: 'Raleway-Bold';
     font-weight: normal;
     padding-left: 25px;
-
 }
 
 .act {
@@ -444,13 +448,13 @@ nav a {
     margin-bottom: 20px;
 }
 .propos h2{
-    font-size: 26px;
+    font-size: 22px;
     font-family: 'Raleway-Bold';
     font-weight: normal;
 }
 
 .propos p {
-    font-size: 24px;
+    font-size: 18px;
     font-family: 'Raleway-Regular';
 }
                                                 
