--- a/smartphone _small.css
+++ b/smartphone _small.css
@@ -47,12 +47,12 @@ nav a {
 }
 
 .link_smart, .inscription {
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .link_smart {
     width: 50%;
-    height: 65px;
+    height: 50px;
     color: black;
     font-family: 'Raleway-Regular';    
     border-bottom: 4px solid #F2F2F2;
@@ -78,7 +78,7 @@ nav a {
 
 #accroche h1 {
     
-    font-size: 26px;
+    font-size: 22px;
     margin-bottom: 10px;
     margin-top: 35px;
     margin-right: 10px;
@@ -88,7 +88,7 @@ nav a {
 
 #accroche p {
     margin-top: 10px;
-    font-size: 19px;
+    font-size: 16px;
     font-family: 'Raleway-Regular';
 }
 
@@ -96,31 +96,31 @@ nav a {
     display: flex;
     justify-content: center;
     max-width: 100%;
-    height: 70px;
-    margin-top: 50px;
+    height: 50px;
+    margin-top: 40px;
     margin-bottom: 30px;
     border-top: 1px solid #F2F2F2;
     border-bottom: 1px solid #F2F2F2;
-    border-radius: 25px;
+    border-radius: 20px;
 }
 
 .bouton, .search, #recherche span {
-    font-size: 20px;
+    font-size: 18px;
 }
 
 
 #recherche i {
-    font-size: 24px;
+    font-size: 19px;
 	background-color: #F2F2F2;
-	border-top-left-radius: 25px;
-	border-bottom-left-radius: 25px;
+	border-top-left-radius: 20px;
+	border-bottom-left-radius: 20px;
 }
 
 #recherche i, #recherche span {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 70px;
+    min-width: 50px;
 }
 
 .bouton, .search {
@@ -138,12 +138,14 @@ nav a {
     justify-content: center;
     background-color: #0065FC;
 	color: #FFF;
-	border-radius: 25px;
+	border-radius: 20px;
 }
 
 .search {
     border: none;
-    padding: 15px;
+    padding: 10px;
+    padding-top: 0px;
+    padding-bottom: 0px;
     flex-grow: 2;
     min-width: 20%;
 }
@@ -166,10 +168,10 @@ nav a {
     align-items: center;
 	border-color: #ececec;
     border-radius: 50px;
-	font-size: 20px;
+	font-size: 16px;
     border-left: none;
     width: auto;
-    height: 65px;
+    height: 50px;
     margin-right: 10px;
     margin-bottom: 15px;
 }
@@ -195,10 +197,10 @@ nav a {
 
 .fil span {
 	background-color: #DEEBFF;
-	color:#0065FC;
+    color:#0065FC;
 	border-radius: 100%;
-    min-width: 65px;
-    min-height: 65px;
+    min-width: 50px;
+    min-height: 50px;
     justify-self: flex-start;
     display: flex;
 	align-items: center;
@@ -207,7 +209,7 @@ nav a {
 }
 
 #filtres h2, .fil span {
-    font-size: 20px;
+    font-size: 18px;
 }
 
 #indic
@@ -220,12 +222,12 @@ nav a {
 }
 
 #indic i {
-    font-size: 18px;
+    font-size: 14px;
 	color: #0065FC;
 	border: solid;
 	border-color: #F2F2F2;
 	border-radius: 100%;
-    padding: 10px 15px;
+    padding: 5px 10px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -233,8 +235,9 @@ nav a {
 }
 
 #indic p {
-    font-size: 16px;
+    font-size: 14px;
     font-family: 'Raleway-Regular';
+    margin-right: 5px;
 }
 
 #section_hebergement {
@@ -254,7 +257,7 @@ nav a {
 }
 
 #hebergement h2, #pop_icone h2, #banniere_act h1 {
-    font-size: 21px;
+    font-size: 19px;
     font-family: 'Raleway-Bold';
     font-weight: normal;
 }
@@ -266,8 +269,8 @@ nav a {
     border-radius: 20px;
     padding: 6px;
 }
- .heber {
-     margin-bottom: 30px;
+.heber {
+    margin-bottom: 30px;
  }
 
 #hotel_smart img {
@@ -284,18 +287,18 @@ nav a {
 }
 
 #hotel_smart h3 {
-    font-size: 17px;
+    font-size: 13px;
     font-family: 'Raleway-Bold';
     font-weight: normal;
 }
 
 #hotel_smart p {
-    font-size: 15px;
+    font-size: 12px;
     font-family: 'Raleway-Regular';
 }
 
 #hotel_smart i {
-    font-size: 15px;
+    font-size: 12.5px;
     margin-bottom: 5px;
 }
 
@@ -312,7 +315,7 @@ nav a {
 }
 
 .afficher {
-    font-size: 20px;
+    font-size: 16px;
     font-family: 'Raleway-Bold';
     color: black;
     text-decoration: none;
@@ -354,14 +357,14 @@ nav a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 25px;
+    font-size: 22px;
     margin-bottom: 10px;
 }
 
 .pop {
     display: flex;
-    min-height: 150px;
-    max-height: 180px;
+    min-height: 120px;
+    max-height: 160px;
     padding-right: 20px;
 }
 
@@ -376,7 +379,7 @@ nav a {
 }
 
 .pop h3 {
-    font-size: 16px;
+    font-size: 13px;
     margin-top: 10px;
     margin-bottom: 10px;
     font-family: 'Raleway-Bold';
@@ -385,17 +388,17 @@ nav a {
 
 .pop p {
     margin-top: 4px;
-    font-size: 14px;
+    font-size: 12px;
     font-family: 'Raleway-Regular';
 }
 
 .pop i {
-    font-size: 15px;
+    font-size: 12px;
     margin-bottom: 5px;
 }
 
 .pop .etoile {
-    margin-top: 50px;
+    margin-top: 40px;
     margin-bottom: 5px;
 }
 #banniere_act {
@@ -419,7 +422,7 @@ nav a {
 }
 
 .act h3 {
-    font-size: 18px;
+    font-size: 15px;
     font-family: 'Raleway-Bold';
     font-weight: normal;
     padding-left: 25px;
@@ -448,13 +451,13 @@ nav a {
     margin-bottom: 20px;
 }
 .propos h2{
-    font-size: 22px;
+    font-size: 19px;
     font-family: 'Raleway-Bold';
     font-weight: normal;
 }
 
 .propos p {
-    font-size: 18px;
+    font-size: 15px;
     font-family: 'Raleway-Regular';
 }
                                                 
