--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -1,31 +1,12 @@
-@font-face {
-    font-family: 'Raleway-Bold';     
-    src: url(font/Raleway-Bold.ttf);
-}
-
-@font-face {
-    font-family: 'Raleway-Regular';
-    src: url(font/Raleway-Regular.ttf);
-}
-
-@font-face {
-    font-family: 'Raleway-SemiBold';
-    src: url(font/Raleway-Regular.ttf);
-}
-
 #bloc_page {
     max-width: 1200px;
-    margin: auto;
-    font-family: 'Raleway-SemiBold', Sans Serif;
 }
 
 .smart, .smart .etoile, .smart .heber {
     display: none;
 }
+
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding-top: 20px;
 }
 
@@ -38,52 +19,31 @@ nav, ul {
     display: flex;
     align-items: center;
     list-style-type: none;
-    font-size: 14px;
-}
-
-nav a {
-    text-decoration: none;
+  
 }
 
 .link {
-    color: black;
     padding-left: 35px;
     padding-right: 35px;
     
 }
 
-.link:hover {
-    border-top: 3px solid #0065FC;
-    padding-top: 30px;
-    color: #0065FC;
-}
-
 .inscription {
-    color: #0065FC;
-    font-weight: bold;
     margin-left: 35px;
     margin-right: 10px;
-}
-
-nav a:visited {
-    text-decoration: none;
 }
 
 #accroche h1 {
     font-size: 19px;
     margin-bottom: 0;
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
 }
 
 #accroche p { 
     font-size: 14px;
     margin-top: 5px;
-    font-family: 'Raleway-Regular';
 }
 
 #recherche {
-    display: flex;
 	height: 45px;
 	max-width: 350px;
     margin-bottom: 30px;
@@ -94,70 +54,37 @@ nav a:visited {
 }
 
 #recherche i {
-	display: flex;
-	justify-content: center;
-	background-color: #F2F2F2;
 	border-top-left-radius: 15px;
 	border-bottom-left-radius: 15px;
     width: 45px;
-	align-items: center;
+	
 }
 
 #recherche span {
     display: none;
 }
 
-.bouton, .search {
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
-}
-
 .bouton {
-	background-color: #0065FC;
-	color: #FFF;
 	border-top-right-radius: 15px;
 	border-bottom-right-radius: 15px;
-	border: none;
     padding: 15px;
     width: 110px;
 }
 
 .search {
     width: 170px;
-	border-color: #F2F2F2;
-    border-style: solid;
     padding: 10px;
 }
 
 #filtres {
-    display: flex;
     align-items: center;
 }
 
-#container_fil {
-    display: flex;
-}
-
 .fil {
-    display: flex;
-	border: solid;
-	border-color: #F2F2F2;
 	border-radius: 40px;
 	font-size: 16px;
-    border-left: none;
     height: 40px;
     margin-right: 20px;
-}
-
-.fil p, .fil span {
-    display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.fil p, #filtres h2 {
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
 }
 
 .fil p {
@@ -165,19 +92,10 @@ nav a:visited {
     padding-left: 10px;
 }
 
-.fil:hover {
-    color: white;
-    background-color: #0065FC;
-}
-
 .fil span {
-	background-color: #DEEBFF;
-	color:#0065FC;
 	border-radius: 100%;
 	width: 40px;
 	height: 40px;
-	justify-self: flex-start;
-	border: none;
 }
 
 #filtres h2 {
@@ -187,40 +105,29 @@ nav a:visited {
 
 #indic
 {
-	display: flex;
     margin-top: 20px;
     margin-bottom: 15px;
-	justify-content: flex-start;
     align-items: center;
 }
 
 #indic i {
 	font-size: 12px;
-	color: #0065FC;
-	border: solid;
-	border-color: #F2F2F2;
 	border-radius: 100%;
 	width: 20px;
 	height: 20px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
 	margin-right: 10px;
 }
 
 #indic p {
     font-size: 13.5px;
-    font-family: 'Raleway-Regular';
 }
 
 #section_hebergement {
-    display: flex;
     margin: auto;
 }
 
 #hebergement, #populaire {
     margin: auto;
-    background-color: #F2F2F2;
     border-radius: 25px;
     padding: 35px;
     padding-top: 15px;
@@ -230,16 +137,14 @@ nav a:visited {
 
 #hebergement {
     margin-right: 35px;
+    background-color: #F2F2F2;
 }
 
-#hebergement h2, #pop_icone h2 {
+#hebergement h2, #pop_icone h2, #banniere_act h1 {
     font-size: 19px;
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
 }
 
 #hotel {
-    display: flex;
     justify-content: space-between;
     flex-flow: row wrap;
   
@@ -247,9 +152,6 @@ nav a:visited {
 
 .heber, .pop {
     margin-bottom: 30px;
-    background-color: #fff;
-    box-shadow: 5px 5px 20px #bebebe;
-    border-radius: 20px;
     padding: 4px;
 }
 
@@ -271,13 +173,10 @@ nav a:visited {
 
 .heber h3 {
     font-size: 14px;
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
 }
 
 .heber p {
     font-size: 12px;
-    font-family: 'Raleway-Regular';
 }
 
 .heber i {
@@ -285,49 +184,9 @@ nav a:visited {
     margin-top: 1px;
 }
 
-.etoile {
-	color: #0065FC;
-	display: flex;
-	flex-direction: row;
-    align-items: flex-start;
-}
-
-.gris {
-	color: #bebebe;
-	display: flex;
-}
-
 .afficher {
     font-size: 16px;
-    font-weight: bold;
     margin-left: 5px;
-    color: black;
-    text-decoration: none;
-}
-
-#hotel a, #populaire a, #banniere_act a, #bas_de_page a {
-    color: black;
-    text-decoration: none;
-}
-
-#bas_de_page a:hover {
-    text-decoration: underline;
-}
-
-.afficher:hover {
-    color: blue;
-}
-
-#hotel a:hover, #populaire a:hover, #banniere_act a:hover {
-    box-shadow: 0px 0px 10px blue;
-}
-
-#hotel a:active, #populaire a:active, #banniere_act a:active {
-    box-shadow: none;
-}
-
-.prix {
-	font-weight: bold;
 }
 
 #populaire {
@@ -335,14 +194,10 @@ nav a:visited {
 }
 
 #pop_icone {
-	display: flex;
-    justify-content: space-between;
-    align-items: center;
     font-size: 18px;
 }
 
 .pop {
-    display: flex;
     height: 115px;
     padding-right: 35px;
 }
@@ -361,15 +216,12 @@ nav a:visited {
     font-size: 14px;
     margin-top: 10px;
     margin-bottom: 5px;
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
 }
 
 .pop p {
     margin-top: 4px;
     margin-bottom: 35px;
     font-size: 12px;
-    font-family: 'Raleway-Regular';
 }
 
 .pop i {
@@ -387,9 +239,6 @@ nav a:visited {
 
 #banniere_act h1 {
     margin-top: 50px;
-    font-size: 19px;
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
 }
 
 #activite {
@@ -410,15 +259,11 @@ nav a:visited {
     margin-top: 15px;
     margin-left: 20px;
     font-size: 14px;
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
 }
 
 .act, .act2, .act3, .act4, .act5 {
-    background-color: #fff;
     width: 270px;
     border-radius: 20px;
-    box-shadow: 5px 5px 20px #bebebe;
 }
 
 .act img {
@@ -433,28 +278,23 @@ nav a:visited {
     height: 100px;
 }
 
+.act4 img {
+    height: 122px;
+}
+
 .act5 img {
     height: 135px;
 }
 
 #bas_de_page {
-    background-color: #F2F2F2;
     padding: 45px;
     height: 120px;
 }
 
-.footer_align {
-    display: flex;
-    justify-content: space-between;
-    width: 75%;
-}
 .propos h2{
     font-size: 16px;
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
 }
 
 .propos p {
     font-size: 14px;
-    font-family: 'Raleway-Regular';
 }
