--- a/smartphone_small.css
+++ b/smartphone_small.css
@@ -1,24 +1,7 @@
-@font-face {
-    font-family: 'Raleway-Bold';     
-    src: url(font/Raleway-Bold.ttf);
-}
-
-@font-face {
-    font-family: 'Raleway-Regular';
-    src: url(font/Raleway-Regular.ttf);
-}
-
-@font-face {
-    font-family: 'Raleway-SemiBold';
-    src: url(font/Raleway-Regular.ttf);
-}
-
 #bloc_page {
-    
+
     max-width: 100%;
-    margin: 10px;
     margin-top: 20px;
-    font-family: 'Raleway-SemiBold', Sans Serif;
 }
 
 .desk {
@@ -26,9 +9,6 @@
 }
 
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     margin-bottom: 10px;
 }
 
@@ -40,10 +20,7 @@ header img {
 #menu_smart{
     list-style-type: none;
     display: flex;
-}
-
-nav a {
-    text-decoration: none;
+    align-items: center;
 }
 
 .link_smart, .inscription {
@@ -52,9 +29,7 @@ nav a {
 
 .link_smart {
     width: 50%;
-    height: 50px;
-    color: black;
-    font-family: 'Raleway-Regular';    
+    height: 50px;  
     border-bottom: 4px solid #F2F2F2;
 }
 
@@ -63,18 +38,6 @@ nav a {
     justify-content: center;
 }
 
-.inscription {
-    color: #0065FC;
-    font-family: 'Raleway-Bold';
-}
-.link_smart:hover {
-    border-bottom-color: #0065FC;
-    color: #0065FC;
-}
-
-.inscription:visited {
-    text-decoration: none;
-}
 
 #accroche h1 {
     
@@ -82,19 +45,14 @@ nav a {
     margin-bottom: 10px;
     margin-top: 35px;
     margin-right: 10px;
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
 }
 
 #accroche p {
     margin-top: 10px;
     font-size: 16px;
-    font-family: 'Raleway-Regular';
 }
 
 #recherche {
-    display: flex;
-    justify-content: center;
     max-width: 100%;
     height: 50px;
     margin-top: 40px;
@@ -111,21 +69,12 @@ nav a {
 
 #recherche i {
     font-size: 19px;
-	background-color: #F2F2F2;
 	border-top-left-radius: 20px;
 	border-bottom-left-radius: 20px;
 }
 
 #recherche i, #recherche span {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     min-width: 50px;
-}
-
-.bouton, .search {
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
 }
 
 .bouton {
@@ -133,11 +82,6 @@ nav a {
 }
 
 #recherche span {
-
-    display: flex;
-    justify-content: center;
-    background-color: #0065FC;
-	color: #FFF;
 	border-radius: 20px;
 }
 
@@ -151,34 +95,22 @@ nav a {
 }
 
 #filtres {
-    display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
 
 #container_fil {
-    display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
 }
 
 .fil {
-    display: flex;
-    border: solid;
-    align-items: center;
-	border-color: #ececec;
     border-radius: 50px;
 	font-size: 16px;
-    border-left: none;
     width: auto;
     height: 50px;
     margin-right: 10px;
     margin-bottom: 15px;
-}
-
-.fil p, #filtres h2 {
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
 }
 
 .fil p {
@@ -186,26 +118,10 @@ nav a {
     padding-left: 10px;
 }
 
-.fil:hover {
-    color: white;
-    background-color: #0065FC;
-}
-
-.fil:active {
-    background-color: #0065ab;
-}
-
 .fil span {
-	background-color: #DEEBFF;
-    color:#0065FC;
 	border-radius: 100%;
     min-width: 50px;
     min-height: 50px;
-    justify-self: flex-start;
-    display: flex;
-	align-items: center;
-	justify-content: center;
-	border: none;
 }
 
 #filtres h2, .fil span {
@@ -214,34 +130,24 @@ nav a {
 
 #indic
 {
-	display: flex;
     margin-top: 20px;
     margin-bottom: 20px;
-	justify-content: flex-start;
     align-items: baseline;
 }
 
 #indic i {
     font-size: 14px;
-	color: #0065FC;
-	border: solid;
-	border-color: #F2F2F2;
 	border-radius: 100%;
     padding: 5px 10px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
 	margin-right: 15px;
 }
 
 #indic p {
     font-size: 14px;
-    font-family: 'Raleway-Regular';
     margin-right: 5px;
 }
 
 #section_hebergement {
-    display: flex;
     flex-direction: column;
 }
 
@@ -258,14 +164,10 @@ nav a {
 
 #hebergement h2, #pop_icone h2, #banniere_act h1 {
     font-size: 19px;
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
 }
 
 .heber, .pop {
     margin-bottom: 20px;
-    background-color: #fff;
-    box-shadow: 0px 0px 10px #bebebe;
     border-radius: 20px;
     padding: 6px;
 }
@@ -288,13 +190,10 @@ nav a {
 
 #hotel_smart h3 {
     font-size: 13px;
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
 }
 
 #hotel_smart p {
     font-size: 12px;
-    font-family: 'Raleway-Regular';
 }
 
 #hotel_smart i {
@@ -302,67 +201,20 @@ nav a {
     margin-bottom: 5px;
 }
 
-.etoile {
-	color: #0065FC;
-	display: flex;
-	flex-direction: row;
-    align-items: flex-start;
-}
-
-.gris {
-	color: #bebebe;
-	display: flex;
-}
-
 .afficher {
     font-size: 16px;
-    font-family: 'Raleway-Bold';
-    color: black;
-    text-decoration: none;
 }
-
-#hotel_smart a, #populaire a, #banniere_act a, #bas_de_page a {
-    color: black;
-    text-decoration: none;
-}
-
-#bas_de_page a:hover {
-    text-decoration: underline;
-}
-
-.afficher:hover {
-    color: blue;
-}
-
-.heber:hover, #populaire a:hover, #banniere_act a:hover {
-    box-shadow: 0px 0px 10px blue;
-}
-
-.heber:active, #populaire a:active, #banniere_act a:active {
-    box-shadow: none;
-    width: 98%;
-}
-
-.prix {
-	font-weight: bold;
-}
-                                                            
 
 #populaire {
     max-width: 100%;
-    background-color: #F2F2F2;
 }
 
 #pop_icone {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     font-size: 22px;
     margin-bottom: 10px;
 }
 
 .pop {
-    display: flex;
     min-height: 120px;
     max-height: 160px;
     padding-right: 20px;
@@ -382,14 +234,11 @@ nav a {
     font-size: 12px;
     margin-top: 10px;
     margin-bottom: 10px;
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
 }
 
 .pop p {
     margin-top: 4px;
     font-size: 11px;
-    font-family: 'Raleway-Regular';
 }
 
 .pop i {
@@ -409,7 +258,7 @@ nav a {
     margin-left: 30px;
 }
 
-#activite_smart, .act {
+#activite_smart {
     display: flex;
     flex-direction: column;
 }
@@ -423,41 +272,29 @@ nav a {
 
 .act h3 {
     font-size: 15px;
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
     padding-left: 25px;
 }
 
 .act {
-    background-color: #fff;
-    border-radius: 20px;
-    box-shadow: 5px 5px 20px #bebebe;
     margin-bottom: 30px;
 }
 
 #bas_de_page {
-    background-color: #F2F2F2;
     padding: 40px;
     margin-top: 5px;
 }
 
 .footer_align {
-    display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    width: 75%;
 }
 .propos {
     margin-bottom: 20px;
 }
 .propos h2{
     font-size: 19px;
-    font-family: 'Raleway-Bold';
-    font-weight: normal;
 }
 
 .propos p {
     font-size: 15px;
-    font-family: 'Raleway-Regular';
 }
                                                 
