--- a/style.css
+++ b/style.css
@@ -1,301 +1,169 @@
+@font-face {
+    font-family: 'Raleway-Bold';     
+    src: url(font/Raleway-Bold.ttf);
+}
+
+@font-face {
+    font-family: 'Raleway-Regular';
+    src: url(font/Raleway-Regular.ttf);
+}
+
+@font-face {
+    font-family: 'Raleway-SemiBold';
+    src: url(font/Raleway-Regular.ttf);
+}
+
 #bloc_page {
-    max-width: 1400px;
+    margin: auto;
 }
 
-.smart, .smart .etoile, .smart .heber {
-    display: none;
+/***** COLORS *****/
+
+.link:hover, .link_smart:hover, .inscription, .fil span, #indic i, .etoile,
+.afficher:hover {
+    color: #0065FC;
 }
 
-header {
-    padding-top: 20px;
+.link_smart:hover {
+    border-bottom-color: #0065FC;
 }
 
-header img {
-    max-width: 90px;
-    max-height: 45px;
+.link, .link_smart, .afficher, .heber,
+#hotel_smart a, #populaire a, #banniere_act a, #bas_de_page a {
+    color: black;
 }
 
-nav, ul {
-    display: flex;
-    align-items: center;
-    list-style-type: none;
+#recherche span, .bouton, .fil:hover {
+    color: #fff;
 }
 
-.link {
-    padding-left: 50px;
-    padding-right: 50px;
-    
+.gris {
+    color: #bebebe;
 }
 
-.inscription {
-    margin-left: 50px;
-    margin-right: 10px;
+/***** LINK *****/
+
+nav a, .afficher, .heber,
+#populaire a, #banniere_act a, #bas_de_page a {
+    text-decoration: none;
 }
 
-#accroche h1 {
-    font-size: 19px;
-    margin-bottom: 0;
+.link:hover {
+    border-top: 3px solid #0065FC;
+    padding-top: 30px;
 }
 
-#accroche p { 
-    font-size: 14px;
-    margin-top: 10px;
+/***** HOVER *****/
+
+#bas_de_page a:hover {
+    text-decoration: underline;
 }
 
-#recherche {
-	height: 50px;
-	max-width: 365px;
-    margin-bottom: 30px;
+.heber:hover, #populaire a:hover, #banniere_act a:hover {
+    box-shadow: 0px 0px 10px blue;
 }
 
-#recherche i, .bouton, .search {
-    font-size: 16px;
+.heber:active, #populaire a:active, #banniere_act a:active {
+    box-shadow: none;
 }
 
-#recherche i {
-	border-top-left-radius: 15px;
-	border-bottom-left-radius: 15px;
-    flex: 1;
+/***** BACKGROUND COLORS *****/
+
+.heber, .pop, .act,
+.act2, .act3, .act4, .act5 { 
+    background-color: #fff;
+    box-shadow: 0px 0px 15px #bebebe;
+    border-radius: 20px;
 }
 
-#recherche span {
-    display: none;
+#recherche i, #populaire, #bas_de_page {
+    background-color: #f2f2f2;
 }
 
-.bouton {
-	border-top-right-radius: 15px;
-	border-bottom-right-radius: 15px;
-	flex: 2;
-    padding: 15px;
-}
-
-.search {
-    width: 180px;
-    padding: 10px;
-}
-
-#filtres {
-    align-items: center;
-}
-
-.fil {
-	border-radius: 40px;
-	font-size: 19px;
-    height: 50px;
-    margin-right: 25px;
-}
-
-.fil p {
-    padding-right: 20px;
-    padding-left: 10px;
-    
+#recherche span, .bouton, .fil:hover {
+    background-color: #0065FC;
 }
 
 .fil span {
-	border-radius: 100%;
-	width: 50px;
-	height: 50px;
+    background-color: #DEEBFF;
 }
 
-#filtres h2 {
-    font-size: 16px;
-    margin-right: 15px;
+/***** BORDER *****/
+
+.search, .fil, #indic i {
+    border: solid;
+    border-color: #f2f2f2;
 }
 
-#indic
-{
-    margin-top: 20px;
-    margin-bottom: 15px;
+.bouton, .fil span {
+    border: none;
+}
+
+.fil {
+    border-left: none;
+}
+
+
+/***** FONT-FAMILY *****/
+
+.inscription, .afficher,
+.bouton, .search, .fil p,
+h1, h2, h3 {
+    font-family: 'Raleway-Bold';
+}
+
+p, .link_smart, .link {
+    font-family: 'Raleway-Regular';
+}
+
+.bouton, .search, .fil p,
+h1, h2, h3 {
+    font-weight: normal;
+}
+
+.prix {
+    font-weight: bold;
+}
+
+/***** FLEX *****/
+
+header, #pop_icone, .footer_align {
+    justify-content: space-between;
+}
+
+header,
+#recherche i, #recherche span, .fil span, .fil p,
+#indic i {
     align-items: center;
 }
 
-#indic i {
-	font-size: 14px;
-	border-radius: 100%;
-	width: 25px;
-	height: 25px;
-	margin-right: 10px;
-}
-
-#indic p {
-    font-size: 15px;
-}
-
-#section_hebergement {
-    margin: auto;
-}
-
-#hebergement, #populaire {
-    margin: auto;
-    border-radius: 25px;
-    padding: 40px;
-    padding-top: 15px;
-    padding-bottom: 50px;
-    height: 550px;
-}
-
-#hebergement {
-    margin-right: 40px;
-    background-color: #F2F2F2;
-}
-
-#hebergement h2, #pop_icone h2, #banniere_act h1 {
-    font-size: 21px;
-}
-
-#hotel {
-    justify-content: space-between;
-    flex-flow: row wrap;
-  
-}
-
-.heber, .pop {
-    margin-bottom: 30px;
-    padding: 4px;
-}
-
-.heber {
-    height: 188px;
-}
-
-#hotel img {
-    max-width: 248px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-}
-
-.heber h3, .heber p, .etoile {
-    margin-left: 10px;
-    margin-top: 2px;
-    margin-bottom: 2px;
-}
-
-.heber h3 {
-    font-size: 15.5px;
-}
-
-.heber p {
-    font-size: 14px;
-}
-
-.heber i {
-    font-size: 12px;
-    margin-top: 1px;
-}
-
-.heber .etoile {
-    margin-left: 10px;
-}
-
-.afficher {
-    font-size: 20px;
-    margin-left: 5px;
-}
-
-#populaire {
-    width: 680px;   
-}
-
-#pop_icone {
-    font-size: 18px;
-}
-
-.pop {
-    height: 135px;
-    padding-right: 50px;
-}
-
-.pop h3, .pop p {
-    margin-left: 20px;
-}
-
-.pop img {
-	width: 120px;
-	border-bottom-left-radius: 20px;
-	border-top-left-radius: 20px;
-}
-
-.pop h3 {
-    font-size: 18px;
-    margin-bottom: 5px;
-}
-
-.pop p {
-    margin-top: 4px;
-    margin-bottom: 30px;
-    font-size: 14px;
-}
-
-.pop i {
-    font-size: 12px;
-}
-
-.pop .etoile {
-    margin-left: 20px;
-}
-
-#banniere_act {
-    margin:auto;
-    margin-bottom: 40px;
-}
-
-#banniere_act h1 {
-    margin-top: 50px;
-}
-
-#activite {
+header,
+#recherche, #recherche i, #recherche span,
+#filtres, #container_fil, .fil, .fil p, .fil span,
+#indic, #indic i,
+#section_hebergement, #hotel, #pop_icone, .pop,
+.etoile, .gris,
+.footer_align {
     display: flex;
-    flex-flow: column wrap;
-    justify-content: space-between;
-    align-content: space-between;
-    height: 430px;
 }
 
-#activite img {
-    width: 320px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+#recherche i, #recherche span, .fil span,
+#indic i {
+    justify-content: center;
 }
 
-#activite h3 {
-    margin-top: 15px;
-    margin-left: 20px;
-    font-size: 15px;
+.fil span {
+    justify-self: flex-start;
 }
 
-.act, .act2, .act3, .act4, .act5 {
-    width: 320px;
+.etoile {
+    flex-direction: row;
+    align-items: flex-start;
 }
 
-.act img {
-    height: 380px;
+/***** SIZE *****/
+
+.footer_align {
+    width: 75%;
 }
 
-.act2 img {
-    height: 175px;
-}
-
-.act3 img {
-    height: 110px;
-}
-
-.act4 img {
-    height: 140px;
-}
-
-.act5 img {
-    height: 145px;
-}
-
-#bas_de_page {
-    padding: 45px;
-    height: 120px;
-}
-
-.propos h2{
-    font-size: 16px;
-}
-
-.propos p {
-    font-size: 14px;
-}
